--- a/LazyCafe/app/src/main/res/values/strings.xml
+++ b/LazyCafe/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="queue">Queue</string>
     <string name="profile">Profile</string>
     <string name="go_coffee">Go Coffee</string>
+    <string name="username">" " Username</string>
+    <string name="password">" "Password</string>
+    <string name="login_with_facebook">Login With Facebook</string>
 </resources>
