--- a/LazyCafe/app/src/main/res/values/strings.xml
+++ b/LazyCafe/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="username">" " Username</string>
     <string name="password">" "Password</string>
     <string name="login_with_facebook">Login With Facebook</string>
+    <string name="facebook_app_id">740033442853953</string>
+    <string name="fb_login_protocol_scheme">fb740033442853953</string>
+
 </resources>
